# TODO-app

./: CLAUDE.md  README.md  constitution.md  pyproject.toml
specs/v1.0.0/: todo-app-spec.md
src/todo/: __init__.py  app.py  commands.py  models.py
